--- a/style.css
+++ b/style.css
@@ -113,4 +113,79 @@
   font-size: 16px;
 }
 
+/* MODAL */
+.planillaContenido {
+  width: 1000px;
+  margin: 0 10%;
+  max-height: 60vh;
+  color: black;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: fixed;
+  overflow: auto; 
+  z-index: 9;
+  top: 12vh;
+  scrollbar-color: none;
+
+  border-radius: 30px;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  border: solid 2px black;
+}
+
+.planillaContenido::-webkit-scrollbar {
+  display: none;
+}
+
+.PlanillaHeader{
+  display: flex;
+  justify-content: space-around;
+  background-color: #fff;
+  color: black;
+  width: 100%;
+}
+
+.planillaHeaderTitulo {
+  justify-self: start;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.planillaBotonHeader {
+  cursor: pointer;
+  width: 20px;
+  height: 25px;
+  font-size: 20px;
+  margin-top: 20px;
+  background-color: #fff;
+  color: black;
+}
+
+.planillaContenido img {
+  height: 120px;
+  width: 120px;
+}
+
+.planillaContenido h3 {
+  font-size: 14px;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.planillaContenido p {
+  font-size: 14px;
+  margin-top: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.totalContenido {
+  font-size: 25px;
+  padding: 20px;
+  text-align: center;
+  padding-top: 20px;
+  font-weight: bold;
+}
 
