--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  display: none;
 
   position: fixed;
   overflow: auto; 
@@ -189,3 +190,18 @@
   font-weight: bold;
 }
 
+#resultado {
+    right: 20px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    display: block;
+}
+
+#resultado li img {
+  height: 100px;
+    width: 100px;
+
+}
