--- a/public/style.css
+++ b/public/style.css
@@ -247,8 +247,12 @@
 }
 
 .borrarProducto {
-  cursor: pointer;
-  margin-left: 70px;
+  cursor: pointer; 
+  background-color: #D90718;
+  color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  border: solid 5px #D90718;
 }
 
 .cantidadCarrito {
