--- a/public/style.css
+++ b/public/style.css
@@ -253,6 +253,12 @@
   border-radius: 30px;
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
   border: solid 5px #D90718;
+  height: min-content;
+  margin-top: 40%;
+}
+
+.imagenCarrito {
+  margin-left: 25%;
 }
 
 .cantidadCarrito {
