--- a/public/style.css
+++ b/public/style.css
@@ -172,6 +172,28 @@
   color: black;
 }
 
+.botonSuma {
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #D90718;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  border: solid 5px #D90718;
+  height: 50px;
+}
+
+.botonResta {
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #D90718;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+  border: solid 5px #D90718;
+  height: 50px;
+}
+
 .planillaContenido img {
   height: 120px;
   width: 120px;
