--- a/public/style.css
+++ b/public/style.css
@@ -303,3 +303,10 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 50px;
 } */
+
+footer {
+  height: 100px;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 20px;
+}
